// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with 1 expense summarized 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $234.43
  </h1>
</div>
`;

exports[`should render correctly with 2 expenses summarized 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $5,522.32
  </h1>
</div>
`;
